executable('rabin2', 'rabin2.c',
  include_directories: [platform_inc],
  dependencies: [
    r_util_dep,
    r_cons_dep,
    r_main_dep,
    r_config_dep,
    r_hash_dep,
    r_io_dep,
    r_crypto_dep,
    r_core_dep,
    r_magic_dep,
    r_bin_dep
  ],
  install: true,
  install_rpath: rpath_exe,
  implicit_include_directories: false
)
