executable('rabin2', 'rabin2.c',
  include_directories: [platform_inc, libsdb_includes],
  dependencies: [
    r_core_dep,
    r_main_dep,
    r_util_dep,
    r_socket_dep,
    r_io_dep,
    r_fs_dep,
    r_bin_dep,
    r_flag_dep,
    r_esil_dep,
    r_arch_dep,
    r_cons_dep,
    r_asm_dep,
    r_debug_dep,
    r_config_dep,
    r_bp_dep,
    r_reg_dep,
    r_syscall_dep,
    r_anal_dep,
    r_egg_dep,
    r_search_dep,
    r_muta_dep,
    r_magic_dep
  ],
  install: true,
  install_rpath: rpath_exe,
  implicit_include_directories: false
)
